[Update Deps] Bump woodstox-core to 7.1.0
^KT-72420